@@ -67,3 +67,11 @@ Files impacted:
 - **Configurable AI Request Timeout**: Added `ADJUDICATOR_AI_REQUEST_TIMEOUT_MS` env var (default 140000 ms)
 - **AbortController**: OpenAI and Azure calls use AbortController with the configured timeout
 - **Consistent Messaging**: Timeout errors report exact seconds instead of hard-coded values
+
+2025-09-29
+- Added recursive splitting for adjudicator responses mirroring `scan-comments` behavior. When providers return refusals, short policy messages, or partial outputs, the function now splits batches and resubmits smaller subsets until results can be parsed or a small limit is reached. This includes:
+  - Refusal/harmful content detection.
+  - Partial parsing tolerant to key-value and JSON formats.
+  - Resubmission of only missing items when partial coverage is detected.
+  - Safe fallback labels when splits reach limits.
+- No changes to client API. Logging updated with [RECURSIVE_SPLIT][ADJ] markers.
